--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
