--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,22 +30,39 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // RecyclerView
+    
+
+    // CardView
+    
+    // Glide
+    
+    //marker
+
+    
+    //floatingprogress
+
+    
+    
 
 
-    compile 'com.android.support:appcompat-v7:25.0.0'
+
+
+
+
+   compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
-
     compile 'com.android.support:design:25.0.0'
     compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.android.support:support-annotations:24.2.0'
+    compile 'com.android.support:support-annotations:25.0.0'
+
     compile 'com.backendless:backendless:3.0.20.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    testCompile 'junit:junit:4.12'
     compile 'com.facebook.android:facebook-android-sdk:4.17.0'
     compile 'com.github.Mariovc:ImagePicker:1.0.3'
-    compile "com.squareup.picasso:picasso:2.5.2"
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'cn.pedant.sweetalert:library:1.3'
@@ -53,30 +70,11 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-
-    // RecyclerView
-    compile 'com.android.support:recyclerview-v7:25.0.+'
-
-    // CardView
-    compile 'com.android.support:cardview-v7:25.0.+'
-
-    // Glide
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-    //marker
-
     compile 'com.koushikdutta.ion:ion:2.+'
-
-    //floatingprogress
-
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
-
     compile 'com.jakewharton:disklrucache:2.0.2'
-
-
-
-
-
-
-
+    testCompile 'junit:junit:4.12'
 }
