--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,26 +31,17 @@ dependencies {
     })
 
     // RecyclerView
-    
 
     // CardView
-    
+
     // Glide
-    
+
     //marker
 
-    
     //floatingprogress
 
-    
-    
 
-
-
-
-
-
-   compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.google.android.gms:play-services:9.8.0'
@@ -78,6 +69,8 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
+    //floatingbuttons
+    compile 'info.hoang8f:fbutton:1.0.5'
 
 
 
@@ -99,3 +92,6 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
