--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,3 +95,6 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
