--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,16 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
+
+    //materialtabs
+    compile 'it.neokree:MaterialTabs:0.11'
+
+    compile('com.github.florent37:materialviewpager:1.2.0@aar') {
+        transitive = true
+    }
+
+    //circlebutton
+    compile 'com.github.markushi:circlebutton:1.1'
     //floatingbuttons
     compile 'info.hoang8f:fbutton:1.0.5'
 
@@ -98,6 +108,15 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
