--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.7.5'
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
@@ -92,6 +93,20 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
+    //showcase :
+    compile 'com.github.wooplr:Spotlight:1.2.2'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.1.0'
+    compile 'com.github.amlcurran.showcaseview:library:5.4.3'
+
+    //slider
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+
+    //reservoir
+    compile 'com.anupcowkur:reservoir:3.1.0'
+
+
+
 
 }
 
@@ -108,6 +123,9 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
