--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
 
+
+
     //materialtabs
     compile 'it.neokree:MaterialTabs:0.11'
 
@@ -107,6 +109,12 @@ dependencies {
 
 
     compile 'com.github.2359media:EasyAndroidAnimations:0.8'
+
+    dependencies {
+        debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+        releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+        testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    }
 
 
 
